# SuryaPrajna

./: .env.example  .gitignore  .lintstagedrc.json  AGENTS.md  CLAUDE.md  PRD.md  README.md  SKILLS.md  TASKS.md  biome.json  package.json  pnpm-lock.yaml  turbo.json  vercel.json
.github/workflows/: ci.yml  deploy-web.yml  release.yml
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: commands.rs  main.rs  tray.rs
apps/web/: .env.example  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: AgentPanel.tsx  ChatHistory.tsx  Navbar.tsx  SkillBrowser.tsx  SkillCard.tsx  WorkspaceChat.tsx
apps/web/lib/: chatMemory.ts  claimAnalyzer.ts  converters.ts  data.ts  projectMemory.ts  proofreadAnalyzer.ts  providers.ts  useProviderKeys.ts
skills/pv-analytics/anova-analysis/: SKILL.md
skills/pv-analytics/gum-uncertainty/: SKILL.md
skills/pv-analytics/monte-carlo/: SKILL.md
skills/pv-analytics/regression-modeler/: SKILL.md
skills/pv-analytics/spc-charts/: SKILL.md
skills/pv-cell-module/bom-generator/: SKILL.md
skills/pv-cell-module/cell-efficiency/: SKILL.md
skills/pv-cell-module/ctm-calculator/: SKILL.md
skills/pv-cell-module/diode-model/: SKILL.md
skills/pv-cell-module/iv-curve-modeler/: SKILL.md
skills/pv-cell-module/lamination-params/: SKILL.md
skills/pv-cell-module/module-construction/: SKILL.md
skills/pv-energy/energy-forecasting/: SKILL.md
(+138 files in other folders)
