[package]
name = "suryaprajna-desktop"
version = "0.1.0"
description = "SuryaPrajna Desktop — Solar PV Scientific Workspace"
authors = ["SuryaPrajna Contributors"]
license = "MIT"
repository = "https://github.com/ganeshgowri-ASA/SuryaPrajna"
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1.3"
calamine = "0.26"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
